# systemd-ui

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
src/: .gitignore  systemadm.desktop
